5/9/2025, 1:52PM: Complete implementation of project until nCr, minus documentation. TODO: BPDF, BCDF, NPDF and other table calcs.